testcases/error/multiple_assignment.veryl
module multiple_assignment {
    var a: logic;

    always_comb {
        a = 1;
    }

    always_comb {
        a = 1;
    }
}
